# netd

./: LICENSE.txt  README.md  pyproject.toml
netds/: README.md  pyproject.toml
netds/src/netds/: __about__.py  __init__.py  netsi_data.py
src/netd/.ipynb_checkpoints/: __init__-checkpoint.py
src/netds/: __init__.py
tests/: __init__.py
