[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netds"
version = "0.1"
description = ''
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "liu-yi-xuan", email = "53630521+liu-yi-xuan@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/liu-yi-xuan/netds#readme"
Issues = "https://github.com/liu-yi-xuan/netds/issues"
Source = "https://github.com/liu-yi-xuan/netds"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/netds tests}"

[tool.coverage.run]
source_pkgs = ["netds", "tests"]
branch = true
parallel = true
omit = [
  "src/netds/__about__.py",
]

[tool.coverage.paths]
netds = ["src/netds", "*/netds/src/netds"]
tests = ["tests", "*/netds/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
